--- a/idcard.html
+++ b/idcard.html
@@ -1,146 +1,266 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <title>${s.FullName} | ID Card</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Noorussalam Madrasa — ID Card Generator</title>
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+<!-- Bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- Premium font -->
+<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
-  <style>
-    body {
-      background: #f0f4ff;
-      font-family: 'Plus Jakarta Sans', sans-serif;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 30px;
-    }
+<style>
+  :root{
+    --primary: #0b5ed7;
+    --card-w: 328px;  /* ~86mm */
+    --card-h: 205px;  /* ~54mm */
+  }
+  html,body{height:100%; margin:0;}
+  body{
+    font-family: "Plus Jakarta Sans", system-ui, -apple-system, "Segoe UI", Roboto, Arial;
+    background: linear-gradient(140deg, var(--primary) 0%, #6fb6ff 60%, #e8f6ff 100%);
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    padding:28px;
+  }
 
-    /* ID CARD */
-    .id-card {
-      width: 340px;
-      background: #ffffff;
-      border-radius: 18px;
-      padding-bottom: 15px;
-      text-align: center;
-      border: 4px solid #0b5ed7;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.2);
-      position: relative;
-    }
+  /* Form Card */
+  .id-form {
+    width:100%;
+    max-width:520px;
+    background: linear-gradient(180deg,#ffffff,#fbfdff);
+    border-radius:16px;
+    padding:26px;
+    box-shadow: 0 14px 40px rgba(2,6,23,0.12);
+    text-align:center;
+  }
+  .id-form img { margin-bottom:10px; }
+  .id-form h1 { font-size:1.05rem; color:var(--primary); margin:6px 0 6px; font-weight:700; letter-spacing:0.6px; }
+  .id-form p { color:#475569; margin-bottom:14px; }
 
-    /* Header */
-    .id-header {
-      background: linear-gradient(90deg, #0b5ed7, #74b9ff);
-      color: white;
-      padding: 12px;
-    }
-    .id-header h5 {
-      margin: 0;
-      font-size: 17px;
-      font-weight: 700;
-    }
-    .id-header small {
-      display: block;
-      margin-top: 2px;
-      font-size: 12px;
-      opacity: 0.95;
-    }
+  .form-control { height:46px; border-radius:10px; }
+  .btn-generate {
+    background: linear-gradient(90deg,var(--primary),#167bff);
+    color:#fff;
+    border:0;
+    border-radius:10px;
+    height:46px;
+    font-weight:700;
+    box-shadow: 0 10px 22px rgba(11,94,215,0.18);
+  }
+  .btn-generate:hover { transform:translateY(-2px); }
 
-    /* Photo */
-    .id-photo {
-      width: 95px;
-      height: 95px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-top: -25px;
-      border: 4px solid white;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.25);
-    }
+  small.hint { display:block; margin-top:10px; color:#6b7280; font-size:13px; }
 
-    .info p {
-      margin: 2px 0;
-      font-size: 14px;
-      color: #222;
-    }
-
-    /* QR */
-    .qr-code img {
-      margin-top: 5px;
-      width: 90px;
-    }
-    .academic-year {
-      margin-top: 5px;
-      font-weight: 700;
-      color: #0b5ed7;
-    }
-
-    /* PRINT SETTINGS */
-    @media print {
-      body {
-        background: white !important;
-      }
-      .print-hide {
-        display: none !important;
-      }
-    }
-
-    /* Print Button (hidden by default – only for debugging) */
-    .print-btn {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: #0b5ed7;
-      color: white;
-      border-radius: 50px;
-      padding: 10px 20px;
-      font-weight: 600;
-      border: none;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      cursor: pointer;
-    }
-  </style>
+  @media (max-width:520px){ .id-form{padding:18px;} }
+</style>
 </head>
-
 <body>
 
-  <div class="id-card" id="idcard">
-    <div class="id-header">
-      <h5>NOORUSSALAM SECONDARY MADRASA</h5>
-      <small>Kambippalam Kerala Estate</small>
+  <div class="id-form">
+    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" alt="logo" width="96">
+    <h1>NOORUSSALAM MADRASA</h1>
+    <p>Enter Class and Roll Number — the ID card will open in a new tab and print automatically.</p>
+
+    <form id="idForm" class="mt-3">
+      <div class="mb-3 text-start">
+        <label class="form-label">Class</label>
+        <input name="class" class="form-control" placeholder="e.g. 7A or 8" required>
+      </div>
+
+      <div class="mb-3 text-start">
+        <label class="form-label">Roll Number</label>
+        <input name="roll" class="form-control" placeholder="e.g. 12" required inputmode="numeric" pattern="[0-9]*">
+      </div>
+
+      <button type="submit" class="btn btn-generate w-100">Generate Digital ID Card</button>
+      <small class="hint">Printed size: CR-80 (86 × 54 mm). The new tab will auto-open and print the card.</small>
+    </form>
+  </div>
+
+<script>
+/* ====== CONFIG — replace with your Apps Script URL if different ====== */
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec";
+
+/* ====== base64 watermark image (embedded) ======
+   The image below is your uploaded logo encoded as data URL.
+   This ensures the watermark always appears in print.
+====================================================================== */
+const WATERMARK_DATA_URL = "data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD..."; /* trimmed in this comment for readability - full data included below in generated HTML */ 
+
+/* Helper to escape HTML */
+function escapeHtml(str){
+  if (str === null || str === undefined) return '';
+  return String(str)
+    .replaceAll('&','&amp;')
+    .replaceAll('<','&lt;')
+    .replaceAll('>','&gt;')
+    .replaceAll('"','&quot;')
+    .replaceAll("'",'&#39;');
+}
+
+document.getElementById('idForm').addEventListener('submit', async (ev) => {
+  ev.preventDefault();
+  const fd = new FormData(ev.target);
+  const cls = (fd.get('class') || '').toString().trim();
+  const roll = (fd.get('roll') || '').toString().trim();
+  if (!cls || !roll) { alert('Please enter class and roll number.'); return; }
+
+  // open blank tab first to avoid popup blocking
+  const win = window.open('', '_blank');
+  win.document.write(`<div style="font-family:Plus Jakarta Sans,Arial,sans-serif;text-align:center;padding:36px;color:${'#0b5ed7'};"><h3>Loading ID Card...</h3></div>`);
+
+  const url = `${SCRIPT_URL}?class=${encodeURIComponent(cls)}&roll=${encodeURIComponent(roll)}`;
+
+  try {
+    const r = await fetch(url);
+    const data = await r.json();
+
+    if (!data || data.result !== 'success') {
+      const msg = data && data.message ? data.message : 'Student not found or server error.';
+      win.document.body.innerHTML = `<div style="font-family:Plus Jakarta Sans,Arial,sans-serif;padding:36px;text-align:center;color:#b91c1c;"><h3>${escapeHtml(msg)}</h3></div>`;
+      return;
+    }
+
+    const s = data.student || {};
+    s.FullName = s.FullName || 'STUDENT NAME';
+    s.UID = s.UID || '';
+    s.AdmissionNumber = s.AdmissionNumber || '';
+    s.FatherName = s.FatherName || '';
+    s.ClassLevel = s.ClassLevel || cls;
+    s.RollNumber = s.RollNumber || roll;
+    s.Phone = s.Phone || '';
+    s.Address = s.Address || '';
+    s.PhotoURL = s.PhotoURL || 'https://via.placeholder.com/300x300.png?text=Photo';
+
+    // Full data URL for watermark — inserted here programmatically below.
+    // NOTE: we'll embed the actual base64 string in the new window HTML to ensure print reliability.
+    const watermark = WATERMARK_DATA_URL;
+
+    // Build the popup HTML: square photo with rounded corners, watermark, 3D border, auto-print
+    const popupHtml = `<!doctype html>
+<html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>${escapeHtml(s.FullName)} — ID Card</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+<style>
+  :root{ --primary: #0b5ed7; --card-w: ${'328px'}; --card-h: ${'205px'}; }
+  html,body{height:100%; margin:0;}
+  body{ font-family: 'Plus Jakarta Sans', sans-serif; background:#eef6ff; display:flex; align-items:center; justify-content:center; padding:28px; }
+
+  /* print only the card */
+  @media print {
+    body * { visibility: hidden; }
+    #idcard, #idcard * { visibility: visible; }
+    #idcard { position: absolute; left:50%; top:10px; transform: translateX(-50%); }
+  }
+
+  /* card */
+  .id-card {
+    width: var(--card-w);
+    height: var(--card-h);
+    border-radius:14px;
+    background: linear-gradient(180deg,#ffffff 0%, #f6fbff 100%);
+    border: 4px solid var(--primary);
+    box-shadow: 0 12px 36px rgba(2,6,23,0.16), inset 0 2px 14px rgba(11,94,215,0.03);
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+  }
+
+  /* watermark */
+  .watermark {
+    position:absolute;
+    width:180px; height:180px;
+    top:48%; left:50%;
+    transform:translate(-50%,-50%);
+    background-image: url("${watermark}");
+    background-size: contain;
+    background-repeat: no-repeat;
+    opacity: 0.06; /* very light per your choice */
+    border-radius:50%;
+    z-index:0;
+    pointer-events:none;
+    filter: blur(0.2px);
+  }
+
+  .id-header {
+    background: linear-gradient(90deg,var(--primary), #6fb6ff);
+    padding:8px 10px;
+    color:#fff;
+    z-index:2;
+    position:relative;
+  }
+  .id-header h4{ margin:0; font-size:13px; font-weight:700; }
+  .id-header small{ display:block; font-size:9px; margin-top:2px; opacity:0.95; }
+
+  .photo {
+    width:94px; height:78px; /* square rectangle with rounded corners */
+    object-fit:cover;
+    border-radius:10px;
+    border:3px solid #fff;
+    margin-top:8px;
+    box-shadow:0 6px 18px rgba(2,6,23,0.16);
+    position:relative;
+    z-index:2;
+  }
+
+  .fullname{ color:var(--primary); font-weight:700; margin-top:8px; font-size:14px; z-index:2; position:relative; }
+  .details{ text-align:left; padding:0 14px; margin-top:6px; font-size:11px; line-height:12px; z-index:2; position:relative; }
+  .details p { margin:3px 0; color:#0f172a; }
+
+  .footer-note { position:absolute; bottom:8px; width:100%; text-align:center; font-size:10px; color:#0b5ed7; font-weight:600; z-index:2; }
+
+</style>
+</head>
+<body>
+  <div id="idcard" class="id-card" role="region" aria-label="Student ID card">
+    <div class="watermark" aria-hidden="true"></div>
+
+    <div class="id-header" role="heading">
+      <h4>NOORUSSALAM SECONDARY MADRASA</h4>
+      <small>Kambippalam - Kerala Estate</small>
       <small>Under SKIMVB | Reg No: 6110</small>
     </div>
 
-    <img src="${s.PhotoURL}" class="id-photo">
+    <img src="${escapeHtml(s.PhotoURL)}" alt="student photo" class="photo" />
 
-    <div class="info">
-      <p><strong>${s.FullName}</strong></p>
-      <p><b>UID:</b> ${s.UID}</p>
-      <p><b>Admission No:</b> ${s.AdmissionNumber}</p>
-      <p><b>Father:</b> ${s.FatherName}</p>
-      <p><b>Class:</b> ${s.ClassLevel}</p>
-      <p><b>Roll No:</b> ${s.RollNumber}</p>
-      <p><b>Phone:</b> ${s.Phone}</p>
+    <div class="fullname">${escapeHtml(s.FullName)}</div>
+
+    <div class="details" aria-live="polite">
+      <p><strong>UID:</strong> ${escapeHtml(s.UID)}</p>
+      <p><strong>Admission No:</strong> ${escapeHtml(s.AdmissionNumber)}</p>
+      <p><strong>Father's Name:</strong> ${escapeHtml(s.FatherName)}</p>
+      <p><strong>Class:</strong> ${escapeHtml(s.ClassLevel)}</p>
+      <p><strong>Roll No:</strong> ${escapeHtml(s.RollNumber)}</p>
+      <p><strong>Phone:</strong> ${escapeHtml(s.Phone)}</p>
+      <p><strong>Address:</strong> ${escapeHtml(s.Address)}</p>
     </div>
 
-    <div class="qr-code">
-      <img src="${qrURL}">
-      <p class="academic-year">Academic Year 2025–26</p>
-    </div>
+    <div class="footer-note">Academic Year: 2025–26</div>
   </div>
 
-  <!-- Hidden print button (not shown in print) -->
-  <button class="print-btn print-hide" onclick="window.print()">Print</button>
-
-  <!-- Auto Print -->
+  <!-- Auto print immediately when loaded (hidden UI, no buttons) -->
   <script>
-    window.onload = function() {
-      setTimeout(() => {
-        window.print();
-      }, 300);
+    window.onload = function(){
+      // Wait a short time to ensure fonts/images render, then print
+      setTimeout(() => { window.print(); }, 300);
     };
   </script>
+</body>
+</html>`;
 
+    // write fully built HTML into the new tab
+    win.document.open();
+    win.document.write(popupHtml);
+    win.document.close();
+  } catch (err){
+    console.error(err);
+    win.document.body.innerHTML = `<div style="font-family:Plus Jakarta Sans,Arial;padding:36px;text-align:center;color:#b91c1c;"><h3>Error fetching data</h3><p>Check Apps Script deployment or console.</p></div>`;
+  }
+});
+</script>
 </body>
 </html>
